--- a/src/app/src/main/res/layout/layout_tab2.xml
+++ b/src/app/src/main/res/layout/layout_tab2.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical">
 
     <ScrollView
@@ -106,12 +106,11 @@
                 android:textStyle="bold" />
 
             <GridView
-                android:id="@+id/gv_tab1"
+                android:id="@+id/gv_tab2"
                 android:layout_width="match_parent"
-                android:layout_height="463dp"
-                android:layout_marginTop="32dp"
+                android:layout_height="499dp"
+                android:layout_marginTop="16dp"
                 android:numColumns="3"
-                android:verticalSpacing="16dp"
                 android:visibility="visible" />
 
         </LinearLayout>
