--- a/src/app/src/main/res/layout/layout_tab1.xml
+++ b/src/app/src/main/res/layout/layout_tab1.xml
@@ -108,12 +108,21 @@
             <GridView
                 android:id="@+id/gv_tab1"
                 android:layout_width="match_parent"
-                android:layout_height="463dp"
+                android:layout_height="400dp"
                 android:layout_marginTop="32dp"
                 android:numColumns="3"
                 android:verticalSpacing="16dp"
                 android:visibility="visible" />
 
+            <Button
+                android:id="@+id/button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Nhập khoản tiền chi"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
         </LinearLayout>
     </ScrollView>
+
 </LinearLayout>
