--- a/src/app/src/main/res/layout/activity_signup.xml
+++ b/src/app/src/main/res/layout/activity_signup.xml
@@ -32,7 +32,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:fontFamily="casual"
+                android:fontFamily="sans-serif"
                 android:text="Create Account"
                 android:textAlignment="center"
                 android:textColor="#3D88A0"
@@ -50,7 +50,7 @@
                 android:drawableStart="@drawable/name"
                 android:drawablePadding="16dp"
                 android:ems="10"
-                android:fontFamily="casual"
+                android:fontFamily="sans-serif"
                 android:hint="Name"
                 android:inputType="textPersonName"
                 android:padding="8dp"
@@ -68,7 +68,7 @@
                 android:drawableStart="@drawable/email"
                 android:drawablePadding="16dp"
                 android:ems="10"
-                android:fontFamily="casual"
+                android:fontFamily="sans-serif"
                 android:hint="Email"
                 android:inputType="textPersonName"
                 android:padding="8dp"
@@ -86,7 +86,7 @@
                 android:drawableStart="@drawable/password"
                 android:drawablePadding="16dp"
                 android:ems="10"
-                android:fontFamily="casual"
+                android:fontFamily="sans-serif"
                 android:hint="Password"
                 android:inputType="textPersonName"
                 android:padding="8dp"
@@ -101,7 +101,7 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/btn_login"
-                android:fontFamily="casual"
+                android:fontFamily="sans-serif"
                 android:text="Sign UP"
                 android:textAllCaps="true"
                 android:textSize="24sp"
@@ -113,7 +113,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:fontFamily="casual"
+                android:fontFamily="sans-serif"
                 android:text="Already have an account?"
                 android:textAlignment="center"
                 android:textColor="#3D88A0"
