--- a/src/app/src/main/res/layout/activity_login.xml
+++ b/src/app/src/main/res/layout/activity_login.xml
@@ -32,7 +32,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:fontFamily="casual"
+                android:fontFamily="sans-serif"
                 android:text="Welcome Back"
                 android:textAlignment="center"
                 android:textColor="#3D88A0"
@@ -50,7 +50,7 @@
                 android:drawableStart="@drawable/email"
                 android:drawablePadding="16dp"
                 android:ems="10"
-                android:fontFamily="casual"
+                android:fontFamily="sans-serif"
                 android:hint="Email"
                 android:inputType="textPersonName"
                 android:padding="8dp"
@@ -68,7 +68,7 @@
                 android:drawableStart="@drawable/password"
                 android:drawablePadding="16dp"
                 android:ems="10"
-                android:fontFamily="casual"
+                android:fontFamily="sans-serif"
                 android:hint="Password"
                 android:inputType="textPersonName"
                 android:padding="8dp"
@@ -83,7 +83,7 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/btn_login"
-                android:fontFamily="casual"
+                android:fontFamily="sans-serif"
                 android:text="Login"
                 android:textAllCaps="true"
                 android:textSize="24sp"
@@ -95,7 +95,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:fontFamily="casual"
+                android:fontFamily="sans-serif"
                 android:text="Or"
                 android:textAlignment="center"
                 android:textColor="#3D88A0"
@@ -113,7 +113,7 @@
                     android:layout_height="45dp"
                     android:layout_weight="1"
                     android:layout_marginTop="10dp"
-                    android:fontFamily="casual"
+                    android:fontFamily="sans-serif"
                     android:layout_marginStart="32dp"
                     android:layout_marginEnd="16dp"
                     android:text="Facebook"
@@ -121,7 +121,7 @@
                     android:textColor="@color/white"
                     android:background="@drawable/btn_background"
                     app:backgroundTint="@null"
-                    android:textSize="19sp"
+                    android:textSize="17sp"
                     android:drawableEnd="@drawable/facebook"
                     android:textStyle="bold" />
 
@@ -132,13 +132,13 @@
                     android:layout_weight="1"
                     android:layout_marginEnd="32dp"
                     android:layout_marginTop="10dp"
-                    android:fontFamily="casual"
+                    android:fontFamily="sans-serif"
                     android:text="Google"
                     android:textAlignment="center"
                     android:textColor="@color/white"
                     android:background="@drawable/btn_background"
                     app:backgroundTint="@null"
-                    android:textSize="19sp"
+                    android:textSize="17sp"
                     android:drawableEnd="@drawable/google"
                     android:textStyle="bold" />
 
@@ -148,7 +148,7 @@
                 android:id="@+id/tv_register"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="casual"
+                android:fontFamily="sans-serif"
                 android:text="Are you new user? Register"
                 android:textAlignment="center"
                 android:textColor="#3D88A0"
