--- a/src/app/src/main/res/layout/activity_splash.xml
+++ b/src/app/src/main/res/layout/activity_splash.xml
@@ -24,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:fontFamily="casual"
+        android:fontFamily="sans-serif"
         android:text="Money Mate"
         android:textAlignment="center"
         android:textColor="#1035B0"
