--- a/src/app/src/main/res/layout/layout_item.xml
+++ b/src/app/src/main/res/layout/layout_item.xml
@@ -2,12 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+
     android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/imgcaidat"
-        android:layout_width="95dp"
-        android:layout_height="56dp"
+        android:paddingLeft="16dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="20dp"
         app:srcCompat="@drawable/caidat" />
 
     <TextView
@@ -16,6 +19,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_weight="1"
+        android:layout_marginTop="12dp"
+        android:fontFamily="sans-serif"
+        android:paddingLeft="32dp"
         android:text="Cài đặt"
         android:textColor="#061A85"
         android:textColorLink="#071350"
