--- a/src/app/src/main/res/layout/activity_signup.xml
+++ b/src/app/src/main/res/layout/activity_signup.xml
@@ -40,7 +40,7 @@
                 android:textStyle="bold" />
 
             <EditText
-                android:id="@+id/edt_email"
+                android:id="@+id/edt_name"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginStart="32dp"
@@ -76,7 +76,7 @@
                 android:textSize="21sp" />
 
             <EditText
-                android:id="@+id/edt_password"
+                android:id="@+id/edt_password2"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginStart="32dp"
@@ -95,7 +95,7 @@
                 android:textSize="21sp" />
 
             <Button
-                android:id="@+id/btn_login"
+                android:id="@+id/btn_signup"
                 android:layout_width="200dp"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
