--- a/src/app/src/main/res/layout/activity_login.xml
+++ b/src/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@color/white"
     tools:context=".MainActivity">
 
@@ -57,6 +57,15 @@
                 android:textColorHint="#22C3E6"
                 android:textSize="21sp" />
 
+            <CheckBox
+                android:id="@+id/cbshowemail"
+                android:layout_width="wrap_content"
+                android:layout_height="20dp"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="10dp"
+                android:text="Hiển thị Email"
+                android:textColor="#3D88A0" />
+
             <EditText
                 android:id="@+id/edt_password"
                 android:layout_width="match_parent"
@@ -75,6 +84,15 @@
                 android:textColor="#22C3E6"
                 android:textColorHint="#22C3E6"
                 android:textSize="21sp" />
+
+            <CheckBox
+                android:id="@+id/cbshowpassword"
+                android:layout_width="wrap_content"
+                android:layout_height="20dp"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="10dp"
+                android:text="Hiển thị Password"
+                android:textColor="#3D88A0" />
 
             <Button
                 android:id="@+id/btn_login"
@@ -111,36 +129,36 @@
                     android:id="@+id/btn_facebook"
                     android:layout_width="wrap_content"
                     android:layout_height="45dp"
-                    android:layout_weight="1"
-                    android:layout_marginTop="10dp"
-                    android:fontFamily="sans-serif"
                     android:layout_marginStart="32dp"
+                    android:layout_marginTop="10dp"
                     android:layout_marginEnd="16dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/btn_background"
+                    android:drawableEnd="@drawable/facebook"
+                    android:fontFamily="sans-serif"
                     android:text="Facebook"
                     android:textAlignment="center"
                     android:textColor="@color/white"
-                    android:background="@drawable/btn_background"
-                    app:backgroundTint="@null"
                     android:textSize="17sp"
-                    android:drawableEnd="@drawable/facebook"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    app:backgroundTint="@null" />
 
                 <Button
                     android:id="@+id/btn_google"
                     android:layout_width="wrap_content"
                     android:layout_height="45dp"
-                    android:layout_weight="1"
-                    android:layout_marginEnd="32dp"
                     android:layout_marginTop="10dp"
+                    android:layout_marginEnd="32dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/btn_background"
+                    android:drawableEnd="@drawable/google"
                     android:fontFamily="sans-serif"
                     android:text="Google"
                     android:textAlignment="center"
                     android:textColor="@color/white"
-                    android:background="@drawable/btn_background"
-                    app:backgroundTint="@null"
                     android:textSize="17sp"
-                    android:drawableEnd="@drawable/google"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    app:backgroundTint="@null" />
 
             </LinearLayout>
 
@@ -148,12 +166,12 @@
                 android:id="@+id/tv_register"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:fontFamily="sans-serif"
                 android:text="Are you new user? Register"
                 android:textAlignment="center"
                 android:textColor="#3D88A0"
                 android:textSize="20sp"
-                android:layout_marginTop="10dp"
                 android:textStyle="bold" />
 
 
