--- a/src/app/src/main/res/layout/fragment_chart.xml
+++ b/src/app/src/main/res/layout/fragment_chart.xml
@@ -28,7 +28,7 @@
 
                 <ListView
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                    android:layout_height="50dp" />
             </LinearLayout>
         </ScrollView>
 
