--- a/src/app/src/main/res/layout/layout_tab2.xml
+++ b/src/app/src/main/res/layout/layout_tab2.xml
@@ -35,8 +35,10 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:clickable="false"
                     android:ems="10"
-                    android:inputType="date" />
+                    android:focusable="false"
+                    android:inputType="none" />
             </TableRow>
 
             <TableRow
