luu du lieu chi tieu cua nguoi dung

--- a/src/app/src/main/res/layout/activity_login.xml
+++ b/src/app/src/main/res/layout/activity_login.xml
@@ -57,15 +57,6 @@
                 android:textColorHint="#22C3E6"
                 android:textSize="21sp" />
 
-            <CheckBox
-                android:id="@+id/cbshowemail"
-                android:layout_width="wrap_content"
-                android:layout_height="20dp"
-                android:layout_marginStart="32dp"
-                android:layout_marginTop="10dp"
-                android:text="Hiển thị Email"
-                android:textColor="#3D88A0" />
-
             <EditText
                 android:id="@+id/edt_password"
                 android:layout_width="match_parent"
@@ -88,10 +79,12 @@
             <CheckBox
                 android:id="@+id/cbshowpassword"
                 android:layout_width="wrap_content"
-                android:layout_height="20dp"
+                android:layout_height="15dp"
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="10dp"
+                android:fontFamily="sans-serif"
                 android:text="Hiển thị Password"
+                android:textSize="10sp"
                 android:textColor="#3D88A0" />
 
             <Button
@@ -109,7 +102,7 @@
                 app:backgroundTint="@null" />
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/textViewHaveAccount"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
