--- a/src/app/src/main/res/layout/activity_signup.xml
+++ b/src/app/src/main/res/layout/activity_signup.xml
@@ -109,7 +109,7 @@
                 app:backgroundTint="@null" />
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/textViewHaveAccount"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
