--- a/src/app/src/main/res/layout/layout_tab1.xml
+++ b/src/app/src/main/res/layout/layout_tab1.xml
@@ -13,6 +13,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <!-- Row for Date -->
             <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -36,9 +37,11 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:ems="10"
-                    android:inputType="date" />
+                    android:inputType="none" /> <!-- Changed to none to prevent manual input -->
+
             </TableRow>
 
+            <!-- Row for Note -->
             <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -66,6 +69,7 @@
 
             </TableRow>
 
+            <!-- Row for Money -->
             <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -93,6 +97,7 @@
 
             </TableRow>
 
+            <!-- Category Text -->
             <TextView
                 android:id="@+id/textView9"
                 android:layout_width="match_parent"
@@ -105,6 +110,7 @@
                 android:textSize="16dp"
                 android:textStyle="normal" />
 
+            <!-- GridView for Categories -->
             <GridView
                 android:id="@+id/gv_tab1"
                 android:layout_width="match_parent"
@@ -114,6 +120,7 @@
                 android:verticalSpacing="16dp"
                 android:visibility="visible" />
 
+            <!-- Button for Submit -->
             <Button
                 android:id="@+id/btn_tienchi"
                 android:layout_width="250dp"
