--- a/src/app/src/main/res/layout/layout_tab1.xml
+++ b/src/app/src/main/res/layout/layout_tab1.xml
@@ -6,8 +6,7 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fillViewport="true"
+        android:layout_height="2195dp"
         android:paddingBottom="100dp">
 
         <LinearLayout
@@ -116,7 +115,7 @@
             <GridView
                 android:id="@+id/gv_tab1"
                 android:layout_width="match_parent"
-                android:layout_height="370dp"
+                android:layout_height="329dp"
                 android:layout_marginTop="20dp"
                 android:numColumns="3"
                 android:verticalSpacing="16dp"
@@ -132,8 +131,7 @@
                 android:text="Nhập khoản tiền chi"
                 android:textAllCaps="true"
                 android:textSize="18sp"
-                android:textStyle="bold"
-                />
+                android:textStyle="bold" />
 
         </LinearLayout>
     </ScrollView>
