--- a/src/app/src/main/res/layout/activity_report.xml
+++ b/src/app/src/main/res/layout/activity_report.xml
@@ -77,7 +77,7 @@
         android:layout_width="200dp"
         android:layout_height="40dp"
         android:layout_gravity="center"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/btn_login"
         android:fontFamily="sans-serif"
         android:text="Xuất báo cáo"
@@ -86,6 +86,7 @@
         android:textStyle="bold"
         app:backgroundTint="@null"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/yearSpinner_report" />
 
