--- a/src/app/src/main/res/layout/layout_tab1.xml
+++ b/src/app/src/main/res/layout/layout_tab1.xml
@@ -11,7 +11,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
             <!-- Row for Date -->
@@ -115,7 +115,7 @@
             <GridView
                 android:id="@+id/gv_tab1"
                 android:layout_width="match_parent"
-                android:layout_height="329dp"
+                android:layout_height="330dp"
                 android:layout_marginTop="20dp"
                 android:numColumns="3"
                 android:verticalSpacing="16dp"
