--- a/src/app/src/main/res/layout/activity_forgot_password.xml
+++ b/src/app/src/main/res/layout/activity_forgot_password.xml
@@ -39,9 +39,9 @@
         android:layout_height="45dp"
         android:layout_marginTop="20dp"
         android:layout_weight="1"
-        android:background="@drawable/btn_background"
+        android:background="@drawable/btn_login"
         android:fontFamily="sans-serif"
-        android:text="Lấy mã otp"
+        android:text="Đặt lại mật khẩu"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="17sp"
